force-app/main/default/objects/Aportacion__c/fields/Enviada_Administracion__c.field-meta.xml
<CustomField>
    <fullName>Enviada_Administracion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviada Administración</label>
    <type>Checkbox</type>
</CustomField>