force-app/main/default/objects/Aportacion__c/fields/Numero_de_folio__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_folio__c</fullName>
    <label># Aportación del Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>