force-app/main/default/objects/Aportacion__c/fields/UltimaFechaDeModificacionOrigen__c.field-meta.xml
<CustomField>
    <fullName>UltimaFechaDeModificacionOrigen__c</fullName>
    <label>Última fecha de modificación (origen)</label>
    <type>DateTime</type>
</CustomField>